--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
     "dev": "nodemon  ./index.js"
   },
   "dependencies": {
+    "argon2": "0.30.3",
     "dotenv": "16.0.3",
     "express": "4.18.2",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "9.0.0",
     "mysql": "2.18.1"
   },
   "devDependencies": {
